# gametimer

./: .gitignore  BodyItem.qml  CMakeLists.txt  FooterItem.qml  HeadItem.qml  Main.qml  README.md  TurnsView.qml  applicationdata.cpp  applicationdata.h  countuptimer.cpp  countuptimer.h  gamedata.cpp  gamedata.h  main.cpp  playeritem.cpp  playeritem.h  playermodel.cpp  playermodel.h  turnitem.cpp  turnitem.h  turnmodel.cpp
android/: AndroidManifest.xml
images/: images.qrc
qml/: BodyItem.qml  ControlArea.qml  EnterNameDialog.qml  FooterItem.qml  GameInfoArea.qml  GraphMarkers.qml  HeadItem.qml  LogoArea.qml  Main.qml  MenuButton.qml  MenuLabel.qml  PlayersView.qml  TurnsItem.qml  TurnsView.qml
sources/: countuptimer.cpp  countuptimer.h  gamedata.cpp  gamedata.h  main.cpp  playeritem.cpp  playeritem.h  playermodel.cpp  turnitem.cpp  turnitem.h  turnmodel.cpp  turnmodel.h
